--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "org.shirakawatyu.swust.handiswust"
         minSdk 26
         targetSdk 32
-        versionCode 3
-        versionName "紫微垣-天乙"
+        versionCode 5
+        versionName "紫微垣-玄戈"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -32,6 +32,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation 'com.squareup.okio:okio:3.2.0'
     implementation 'com.alibaba.fastjson2:fastjson2:2.0.16.android'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
