--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.掌上西科Beta"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
         <receiver
